# crewai

./: .gitignore  README.md  agents.py  main.py  pyproject.toml  setup.sh  tasks.py
tools/: calculator_tools.py  search_tools.py
