[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = "test"
authors = ["gus"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai = "0.130.0"
langchain-openai = "0.3.32"
langchain-community = "0.3.15"
langchain = "0.3.15"
unstructured = "0.10.25"
pyowm = "3.3.0"
tools = "0.1.9"
python-dotenv = "1.0.0"
python-decouple = "^3.8"
openai = ">=1.99.9,<2.0.0"
simpleeval = "^1.0.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
uselibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
